--- a/.github/workflows/cd-cloudrun.yml
+++ b/.github/workflows/cd-cloudrun.yml
@@ -62,10 +62,10 @@ jobs:
           python-version: "3.11"
           cache: pip
 
-      - name: Install (train + publish deps)
+      - name: Install (deploy deps)
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[all]"  # includes api, dev, ml, mlops deps; remove extras you don't need for faster installs
+          pip install -e ".[api]"  # includes api, dev, ml, mlops deps; remove extras you don't need for faster installs
 
       - name: Read promoted model URI from registry
         shell: bash
